# edu-ai-product-engineer-2

Julia_Skvortsova/lesson3/pm-agent/app/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
Julia_Skvortsova/lesson3/pm-agent/app/alembic/: env.py
Julia_Skvortsova/lesson3/pm-agent/app/alembic/versions/: 432fbff4d656_initial_schema_with_renamed_tables.py
Julia_Skvortsova/lesson3/pm-agent/app/slack_service/: app.py  client.py  template_renderer.py
Julia_Skvortsova/lesson3/pm-agent/app/slack_service/templates/: bug_approval_approved.j2  bug_approval_executed.j2  bug_approval_rejected.j2  bug_approval_request.j2  duplicate_approval_request.j2  feature_approval_request.j2
Julia_Skvortsova/lesson3/pm-agent/app/src/: constants.py  langfuse_integration.py  langfuse_tracing.py  langfuse_tracing_threaded.py  logfire_integration.py  main.py  run_worker.py
Julia_Skvortsova/lesson3/pm-agent/app/src/api/: queue_status.py
Julia_Skvortsova/lesson3/pm-agent/app/src/config/: __init__.py  app_config.yaml  settings.py
Julia_Skvortsova/lesson3/pm-agent/app/src/db/: __init__.py  approval_service.py  base.py  feature_research_service.py  issue_search_service.py  models.py  review_service.py  ticket_service.py  workflow_service.py
Julia_Skvortsova/lesson3/pm-agent/app/src/guardrails/: __init__.py  bug_submission.py  feature_research.py
Julia_Skvortsova/lesson3/pm-agent/app/src/pm_agents/: bug_approval_judge.py  bug_bot.py  feature_research_bot.py  review_classifier.py  review_classifier_v2.py
Julia_Skvortsova/lesson3/pm-agent/app/src/prompts/: __init__.py  instructions_bug_approval_judge.md  instructions_bug_bot.md  instructions_feature_competitor_analyst.md  instructions_feature_research_orchestrator.md  instructions_feature_research_planner.md  instructions_feature_spec_writer.md  instructions_feature_web_researcher.md  instructions_review_classifier.md  task_assess_bug_submission.md  task_check_issue_duplicate.md  (+7 more)
Julia_Skvortsova/lesson3/pm-agent/mcp_youtrack/: Dockerfile  cache_service.py  pyproject.toml  youtrack_server.py  youtrack_server_http.py
(+283 files in other folders)
