[project]
name = "pm-agent"
version = "0.1.0"
requires-python = ">=3.12"
description = "Multi-agent PM system for processing user reviews"

dependencies = [
    # Core
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Observability
    "langfuse>=2.0.0,<3.0.0",
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    # HTTP client
    "httpx>=0.26.0",
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Slack
    "slack-bolt>=1.18.0",
    # Redis & Queue
    "redis>=5.0.0",
    "arq>=0.25.0",
    # MCP
    "fastmcp>=2.10.0",
    # Utils
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    # Development
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "openai-agents>=0.2.5",
    "aiohttp>=3.12.15",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
